style.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
:root{
    color-scheme: light dark;
    --main-color: #047389;
    --secondary-color: #81a3c2;
    --background-color: #050505;
}
body {
    font-family: 'Ubuntu', sans-serif;
    line-height: 1.6;
    margin: 0px;
    padding: 20px;
    background-color: var(--background-color) !important;
    color: #ddd !important;
    text-align: center;
    padding: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh
}
.Personal-Data-Detail h2{
    margin-bottom: 20px;
    font-size: 3em;
}

.Personal-Data-Detail{
    display: flex;
    flex-direction: column;
    text-align: left;
    margin-left: 50px;
    font-size: 1.2em;
}
.Personal-Data-Detail span{
    font-weight: 500;
    color: rgb(228, 231, 233);
}

.social-networks > *{
    padding: 10px 10px;
    color: var(--main-color);
    transition: all 0.3s ease;
    border: 2px solid var(--main-color);
    border-radius: 10px;
    margin-bottom: 8px;
    margin-right: 10px;
    font-size: 0.8em;
}
.social-networks > *:hover{
    background-color: var(--main-color);
    color: white;
}
nav a:hover {
    position: relative;
    color: var(--main-color);
    text-decoration: none;
    margin: 0px 5px;
    transition: all 0.3s ease;
}
table {
    border-collapse: collapse;
    width: 100%;
    border: 1px solid var(--main-color);
}
th, td {
    padding: 8px;
    border: 1px solid var(--main-color);
}
.Referencias_tabla th, .Referencias_tabla td {
    border: 1px solid #ff9595 ;
    padding: 10px 10px;
}
th {
    background-color: var(--main-color);
    font-size: 1.2em;
    text-align: center;
    font-weight: 600;
}


section h2{
    font-size: 3em;
    font-weight: 500;
}
.Experiencia h3 {
    font-size: 1.5em;
    font-weight: 500;
}

